# curvy

./: Cargo.toml  README.md
crix_runner.crix/: app.toml
crix_runner.crix/skin/: skin.json
demo_app.crix/: app.toml
demo_app.crix/scripts/: calculate_blend.lua  handle_imperial_toggle.lua
demo_app.crix/skin/: skin.json
skins/classic/: skin.json  skin.toml
src/: WIDGETS.md  lib.rs  main.rs
src/bundle/: loader.rs  mod.rs
src/core/: action.rs  app.rs  mod.rs  node.rs  rect.rs  store.rs  tree.rs  view.rs  widget.rs
src/graphics/: canvas.rs  image.rs  mod.rs  renderer.rs
src/graphics/text/: mod.rs
src/platform/: mod.rs  window.rs
src/scripting/: mod.rs
src/skin/: assets.rs  builder.rs  loader.rs  mod.rs  types.rs
src/skin/widgets/: checkbox.rs  directory_picker.rs  file_picker.rs  mod.rs  skin_button.rs  skin_image.rs  skin_vscroll.rs  static_text.rs  text_input.rs
src/widgets/: button.rs  container.rs  image.rs  mod.rs  vscroll_container.rs
