[package]
name = "crix"
version = "0.1.0"
edition = "2024"
default-run = "crix"

[dependencies]
winit = "0.30.0"
softbuffer = "0.4.7"
image = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fontdue = "0.9"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
